--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Calculator</title>
+    <title>UID app</title>
 </head>
 <body>
-<h1 style="text-align: center">Calculator</h1>
-<form method="post" action="calc" id="calc">
+<h1 style="text-align: center">UID app</h1>
+<form method="post" action="uid" id="uid">
     <input value="Show uid" type="submit" />
 </form>
 </body>
